--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "From IT Club with ❤️",
   "main": "app.js",
+  "type": "module",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/realTranQuocBao/HA-dApp-BE/issues"
   },
-  "homepage": "https://github.com/realTranQuocBao/HA-dApp-BE#readme"
+  "homepage": "https://github.com/realTranQuocBao/HA-dApp-BE#readme",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
