--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "homepage": "https://github.com/realTranQuocBao/HA-dApp-BE#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.6",
+    "mongoose-sequence": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
